# ticket-hub

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY-SIT.md  DEPLOY-UAT.md  HANDOFF.md  Makefile  README.md  docker-compose.yml  文件清理建议.md  项目差异报告.md
backend/: .env.example  Makefile  pyproject.toml
backend/adapters/: __init__.py  _token_cache.py
backend/adapters/ai_cs/: __init__.py  client.py  exceptions.py  types.py
backend/adapters/feishu/: __init__.py  client.py  exceptions.py  types.py
backend/adapters/glm/: __init__.py  client.py  exceptions.py  types.py
backend/adapters/ksm/: __init__.py  client.py  exceptions.py  types.py
backend/adapters/linear/: __init__.py  client.py  exceptions.py  types.py
backend/adapters/zammad/: __init__.py  client.py  exceptions.py  types.py
backend/adapters/zhichi/: __init__.py  client.py  exceptions.py  types.py
backend/app/: __init__.py  celery_app.py  config.py  db.py  main.py  models.py
backend/app/api/: admin.py  admin_catalog.py  admin_holidays.py  admin_scopes.py  admin_settings.py  admin_skills.py  admin_users.py  ai_cs_query.py  auth.py  customers.py  health.py  hub_issues.py  metrics.py  supervisor.py  tickets.py  webhooks.py
backend/app/repositories/: assignment_scope.py  customer.py  customer_identity.py  notification_log.py  status_history.py  ticket.py  ticket_hub_issue_history.py  user.py  user_partner.py  user_supervisor.py
backend/app/services/: system_settings.py
backend/config/mappings/: ksm_issue_types.yaml
backend/config/seeds/: assignment_scopes.example.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0001_d0_initial.py  0002_d1_business_tables.py  0002_system_settings.py  0003_d2_materialized_metrics.py  0004_d2_product_line_sla.py  0005_d2_catalog_modules_features.py  0006_d3_ticket_classification.py  0007_d3_a_agent_decisions.py  0008_merge_system_settings.py  0009_d3_e_ticket_embeddings.py  0010_d4_user_linear_team.py  0011_d4_sync_outbox.py  0012_d4_attachments.py  0013_v2_skill_prompts.py  0014_v2_hub_embedding.py  0015_v2_holidays.py  0016_v2_outbox_supply_kind.py  0017_devcollab_hub_fields.py  0018_skill_three_slots.py  0019_owner_split.py  0020_knowledge_op_role.py  0021_operation_status_machine.py
backend/prompts/: answer_router.md  classify.md  classify_v1.md  conflict_detect_v1.md  dedup_v1.md  escalation_classify.md  escalation_reflect.md  hub_dedup.md  triage.md  type_taxonomy.md  vision_extract.md
backend/tests/: conftest.py
backend/tests/eval/: dataset_v1.jsonl  routing_v1.jsonl
backend/tests/integration/: test_d1_e2e.py
backend/tests/unit/: test_admin.py  test_admin_catalog.py  test_admin_holidays_api.py  test_admin_scopes_api.py  test_admin_skills_api.py  test_admin_users.py  test_agent_decision_model.py  test_auth.py  test_complaint_queue_api.py  test_config.py  test_create_hub_issue_api.py  test_customers_api.py  test_dedup_supervisor_api.py  test_eval_dataset.py  test_hub_issue_reply_api.py  test_knowledge_feedback_api.py  test_ksm_writeback_api.py  test_metrics_dashboard.py  test_models_op_status.py  test_readiness.py  test_seed_assignment_scopes.py  test_seed_ksm_type_mappings.py  test_split_api.py  test_supervisor_api.py  test_ticket_history_api.py  test_tickets_api.py  test_trace.py  (+1 more)
cli/: pyproject.toml
cli/tests/: test_admin.py
cli/ticket_hub_cli/: client.py  main.py
deploy/: README.md  (+4 more)
(+267 files in other folders)
