[project]
name = "ticket-hub-backend"
version = "0.1.0"
description = "ticket-hub v0.5.6 backend (FastAPI + Postgres + Celery)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.14",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.2.0",
    "redis>=5.1.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "PyYAML>=6.0.2",
    "holidays>=0.57",
    "pytz>=2024.2",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.0",
    "factory-boy>=3.3.0",
    "polyfactory>=2.16.0",
    "responses>=0.25.0",
    "respx>=0.21.0",
    "testcontainers[postgresql,redis]>=4.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.12.20240917",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring testcontainers",
    "e2e: end-to-end tests requiring real UAT credentials",
    "eval: LLM evaluation tests requiring real provider keys",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not integration and not e2e and not eval",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/main.py", "tests/*"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI Depends() in defaults is the canonical pattern
    "RUF001",  # 中文标点在字符串字面量中是正确字符（要发给 KSM/飞书的中文文案）
    "RUF002",  # 同上, 针对 docstring
    "RUF003",  # 同上, 针对注释
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "N802", "N806"]  # SessionLocal naming; assert in tests; camelCase identifiers from external APIs (billId, accountName)
"migrations/**/*.py" = ["E501", "N999"]
"app/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["app.core.pii.*", "app.services.agents.*", "app.services.identity.*"]
strict = true
