[project]
name = "ticket-hub-cli"
version = "0.1.0"
description = "ticket-hub CLI (Typer)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "typer>=0.12.5",
    "httpx>=0.27.0",
    "rich>=13.9.0",
    "tomli>=2.0.2; python_version < '3.11'",
]

[project.scripts]
ticket-hub = "ticket_hub_cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ticket_hub_cli*"]
